fix(components/views/Faqs):fix text alignment

--- a/src/views/Faqs/Faqs.module.css
+++ b/src/views/Faqs/Faqs.module.css
@@ -39,7 +39,7 @@
   display: inline-block;
   align-self: flex-start;
   position: relative;
-  top: 9rem;
+  top: 9rem; 
   right: 12rem;
 }
 
@@ -87,7 +87,7 @@
   color:var(--white);
   text-shadow: -2px 3px 6px rgba(0,0,0,0.88);
   border: none;
-  outline: none;
+  outline: none;;
 }
 
 .panel_label[aria-expanded="false"]:before {
@@ -108,6 +108,7 @@
 }
 
 .panel_inner {
+  height: auto;
   overflow: hidden;
   will-change: height;
   transition: height 0.4s cubic-bezier(0.65, 0.05, 0.36, 1);
@@ -121,6 +122,7 @@
   color: var(--color-font);
   transition: opacity 0.3s linear 0.18s;
   padding: 20px;
+  text-align: left;
 }
 
 .panel:not(:last-child) {
